<resources>
    <string name="app_name">AKAI Alimentos</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_nome">Nome completo</string>
    <string name="prompt_idade">Idade</string>
    <string name="radio_textview">Sexo</string>
    <string name="radio_text">Masculinio</string>
    <string name="radio_text2">Feminino</string>
    <string name="senha">Senha</string>
    <string name="confirmsenha">Confirmação de senha</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_NewAccount">New Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="edit_message">Testando edit text</string>
</resources>
